# CA-FuseNet

./: .gitignore  Makefile  README.MD  pyproject.toml
configs/: default.yaml
docs/: data_preprocessing.md
src/: main.py
src/ca_fusenet/: train_pose_baseline.py
src/ca_fusenet/configs/: config.yaml
src/ca_fusenet/configs/data/: _schema.yaml  ca_fusenet_dataset.yaml
src/ca_fusenet/configs/eval/: default.yaml  pose.yaml  video.yaml
src/ca_fusenet/configs/experiment/: ca_fusenet.yaml  pose_baseline.yaml  video_baseline.yaml
src/ca_fusenet/configs/model/: ca_fusenet.yaml  pose_baseline.yaml  pose_stgcn_baseline.yaml  rgb_baseline.yaml  rgb_r3d18_baseline.yaml  stgcnpp_baseline.yaml
src/ca_fusenet/configs/preprocessing/: tublets.yaml
src/ca_fusenet/configs/training/: ca_fusenet.yaml  default.yaml  pose.yaml  video.yaml
src/ca_fusenet/data/: collate.py  contracts.py  dataset.py  transforms.py
src/ca_fusenet/data/feeders/: itwpolimi.py
src/ca_fusenet/data/loaders/: __init__.py  base.py  bbox_loader.py  (+4 more)
src/ca_fusenet/models/: pose_baseline.py
src/ca_fusenet/scripts/: analyze_results.py  eval.py  explore_dataset.py  extract_tublets.py  train.py  train_ca_fusenet.py
src/ca_fusenet/training/: criterion.py  data.py  optimizer.py  train.py  train_pose_baseline.py  trainer.py
src/ca_fusenet/utils/: class_mapping.py  engine.py  logging.py  metrics.py  paths.py  seed.py
src/dataset/: itwpolimi_loader.py
src/feeder/: itwpolimi_feeder.py
src/processor/: initializer.py  processor.py
src/utils/: logger.py
tests/: test_data_prep.py  test_getitem.py
(+21 files in other folders)
