[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca_fusenet"
version = "0.1.0"
description = "Crowd-Aware FuseNet (CA-FuseNet)"
readme = "README.MD"
requires-python = ">=3.9"
authors = [{name = "CA-FuseNet Team"}]
dependencies = [
  "hydra-core>=1.3,<2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=7.0",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ca_fusenet" = [
  "configs/*.yaml",
  "configs/*/*.yaml",
  "configs/*/*/*.yaml",
  "configs/*/*/*/*.yaml",
]
